initial commit - Create the basis for the android monitor. Create a pager, pager adapter, and a basic tab fragment to hold text.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,11 @@
     <string name="sdk_manager">SDK manager</string>
     <string name="device_monitor">Android Device Monitor</string>
     <string name="help">Help topics</string>
+
+    <!-- Android monitor tab headings -->
+    <string name="logcat">logcat</string>
+    <string name="memory">memory</string>
+    <string name="cpu">CPU</string>
+    <string name="gpu">GPU</string>
+    <string name="network">Network</string>
 </resources>
